--- a/figuras.html
+++ b/figuras.html
@@ -7,7 +7,47 @@
     <title>Figuras geométricas|Curso de Javascript</title>
   </head>
   <body>
-    <h1>Figuras geométricas</h1>
+    <header>
+      <h1>Figuras geométricas</h1>
+      <p>Este es el primer taller del curso practico de Javascript</p>
+    </header>
+
+    <section>
+      <h2>Calcula el area y perimetro de un cuadrado</h2>
+      <form>
+        <label for="inputCuadrado"
+          >Escribe cuanto mide cada lado de tu cuadrado:</label
+        >
+        <input id="inputCuadrado" type="number" />
+        <button type="button" onclick="calcularPerimetroCuadrado()">
+          Calcular el perimetro
+        </button>
+        <button type="button" onclick="calcularAreaCuadrado()">
+          Calcular el area
+        </button>
+      </form>
+    </section>
+
+    <section>
+      <h2>Calcula el area y perimetro de un Triangulo</h2>
+      <form>
+        <label for="lado1">Lado 1:</label>
+        <input id="lado1" type="number" />
+        <label for="lado2">Lado 2:</label>
+        <input id="lado2" type="number" />
+        <label for="base">Base:</label>
+        <input id="base" type="number" />
+        <label for="altura">Altura:</label>
+        <input id="altura" type="number" />
+        <button type="button" onclick="calcularPerimetroTriangulo()">
+          Calcular el perimetro
+        </button>
+        <button type="button" onclick="calcularAreaTriangulo()">
+          Calcular el area
+        </button>
+      </form>
+    </section>
+
     <script src="./figuras.js"></script>
   </body>
 </html>
